// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpokeTable render should match snapshot 1`] = `
<WithStyles(Paper)>
  <WithStyles(Table)>
    <WithStyles(TableHead)>
      <WithStyles(TableRow)>
        <WithStyles(TableCell)>
          Spoke #
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          Reading
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          Tension (kgf)
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          Variance (%)
        </WithStyles(TableCell)>
      </WithStyles(TableRow)>
    </WithStyles(TableHead)>
    <WithStyles(TableBody)>
      <SpokeRow
        averageTension={100}
        id="spoke-0"
        key="spoke-0"
        spoke={
          Object {
            "id": 0,
            "number": 0,
            "reading": "",
            "spokeId": "spoke-1.8",
            "toolId": "tool",
          }
        }
        updateReading={[Function]}
      />
      <SpokeRow
        averageTension={100}
        id="spoke-1"
        key="spoke-1"
        spoke={
          Object {
            "id": 1,
            "number": 1,
            "reading": "",
            "spokeId": "spoke-1.8",
            "toolId": "tool",
          }
        }
        updateReading={[Function]}
      />
      <SpokeRow
        averageTension={100}
        id="spoke-2"
        key="spoke-2"
        spoke={
          Object {
            "id": 2,
            "number": 2,
            "reading": "",
            "spokeId": "spoke-1.8",
            "toolId": "tool",
          }
        }
        updateReading={[Function]}
      />
    </WithStyles(TableBody)>
  </WithStyles(Table)>
</WithStyles(Paper)>
`;

exports[`SpokeTable render with no tension should match snapshot 1`] = `
<WithStyles(Paper)>
  <WithStyles(Table)>
    <WithStyles(TableHead)>
      <WithStyles(TableRow)>
        <WithStyles(TableCell)>
          Spoke #
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          Reading
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          Tension (kgf)
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          Variance (%)
        </WithStyles(TableCell)>
      </WithStyles(TableRow)>
    </WithStyles(TableHead)>
    <WithStyles(TableBody)>
      <SpokeRow
        averageTension={0}
        id="spoke-0"
        key="spoke-0"
        spoke={
          Object {
            "id": 0,
            "number": 0,
            "reading": "",
            "spokeId": "spoke-1.8",
            "toolId": "tool",
          }
        }
        updateReading={[Function]}
      />
      <SpokeRow
        averageTension={0}
        id="spoke-1"
        key="spoke-1"
        spoke={
          Object {
            "id": 1,
            "number": 1,
            "reading": "",
            "spokeId": "spoke-1.8",
            "toolId": "tool",
          }
        }
        updateReading={[Function]}
      />
      <SpokeRow
        averageTension={0}
        id="spoke-2"
        key="spoke-2"
        spoke={
          Object {
            "id": 2,
            "number": 2,
            "reading": "",
            "spokeId": "spoke-1.8",
            "toolId": "tool",
          }
        }
        updateReading={[Function]}
      />
    </WithStyles(TableBody)>
  </WithStyles(Table)>
</WithStyles(Paper)>
`;
